--- a/Docker-compose-dev.yml
+++ b/Docker-compose-dev.yml
@@ -2,10 +2,13 @@ version: "3"
 services:
   api:
     build: .
+    depends_on:
+      - postgres
     ports:
-        - 8000:8000
-    # env_file:
-    #     - ./.env
+      - "8000:8000"
+    volumes:
+      - ./:/usr/src/app:ro
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
     environment:
       - DATABASE_HOSTNAME=aws-0-us-east-1.pooler.supabase.com
       - DATABASE_PORT=6543
@@ -13,5 +16,16 @@ services:
       - DATABASE_NAME=postgres
       - DATABASE_USERNAME=postgres.vjyeyurjikqcejcjbose
       - SECRET_KEY=eriutgvhenrtyi8geryerwtvgh9er67tehqr4678tbgr8r7rty78n45v78t45n0674bvn
-      - ALGORITHIM=HS256
+      - ALGORITHM=HS256
       - ACCESS_TOKEN_EXPIRE_MINUTES=60
+  
+  postgres:
+    image: postgres
+    environment:
+      - POSTGRES_PASSWORD=Harshit6203731746
+      - POSTGRES_DB=postgres
+    volumes:
+      - postgres-db:/var/lib/postgresql/data
+
+volumes:
+  postgres-db:
