--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -24,12 +24,12 @@ jobs:
           POSTGRES_DB: ${{secrets.DATABASE_NAME}}_test
         ports:
           - 6543:6543
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-          
+        # options: >-
+        #   --health-cmd pg_isready
+        #   --health-interval 10s
+        #   --health-timeout 5s
+        #   --health-retries 5
+
     runs-on: windows-latest
     steps:
       - name: pulling git repo
